# ocr_wrapper

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  callgrind.out  callgrind.out.0  callgrind.out.1  callgrind.out.2  callgrind.out.3  callgrind.out.4  nocache-2sample-fix1-nodenoise.json  nocache-2sample-fix1.json  profile_ocr.ipynb  profile_ocr_multi.py  profile_ocr_single.py  pyproject.toml  responses.pkl  setup.py  test_passport_ocr.ipynb  tryme.ipynb
.github/workflows/: pip-release.yml
devops/: build.sh  deploy.sh  push_gemfury.sh  push_nexus.sh
ocr_wrapper/: __init__.py  aggregate_multiple_responses.py  autoselect.py  aws.py  azure.py  bbox.py  bbox_order.py  bbox_utils.py  compat.py  data_clean_utils.py  easy_ocr.py  google_azure_ocr.py  google_document_ocr_checkbox_detector.py  google_ocr.py  image_pre_processing.py  ocr_wrapper.py  paddleocr.py  pallets.json  qr_barcodes.py  tilt_correction.py  tilt_correction_numpy.py  tilt_correction_torch.py  utils.py
ocr_wrapper/rotation_compensation/: __init__.py  angle_estimation.py  straighten_bboxes.py
streamlit/: README.md  ocr_demo.py
tests/: test_aggregate_multiple_responses.py  test_autoselect.py  test_azure.py  test_bbox.py  test_data_clean_utils.py  test_easyocr.py  test_google_azure_ocr.py  test_google_document_ocr_checkbox_detector.py  test_googleocr.py  test_tilt_correction.py
tests/data/: no_ocr.tif
