[project]
name = "ocr_wrapper"
version = "0.0.26"
license.file = "LICENSE.md"
authors = [{ name = "DeepOpinion", email = "hello@deepopinion.ai" }]
urls.repository = "https://github.com/deepopinion/ocr_wrapper"

dependencies = [
    "Pillow",
    "Shapely>=2.0,<3.0",
    "pdf2image",
    "rtree",
    "opencv-python-headless",
    "torch",
    "torchvision",
    "numpy",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
azure = ["azure-cognitiveservices-vision-computervision"]
google = [
    "google-cloud-vision",
    "grpcio!=1.59.*,!=1.60.*,!=1.61.*,!=1.62.0,!=1.62.1", # https://github.com/deepopinion/ocr_wrapper/issues/17
]
googleazure = ["ocr_wrapper[google,azure]", "google-cloud-documentai"]
aws = ["boto3"]
easy = ["easyocr"]
paddle = ["paddleocr>=2.0.1"]
qr_barcodes = ["pyzbar"]

dev = ["black~=24.4", "hypothesis", "pytest"]
all = ["ocr_wrapper[azure,google,googleazure,aws,easy,paddle,qr_barcodes]"]

[build-system]
requires = ["setuptools>=67.1.0", "wheel>=0.38.4"]

[tool.black]
line-length = 119

[tool.setuptools]
packages = ["ocr_wrapper"]
package-data = { ocr_wrapper = ["*.json"]}
